test/files/neg/noMember1.scala
import scala.collection.IterableOnceOps._

class A
