test/files/neg/noMember1.check
noMember1.scala:1: error: object IterableOnceOps is not a member of package collection
note: trait IterableOnceOps exists, but it has no companion object.
import scala.collection.IterableOnceOps._
                        ^
one error found
